--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,10 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.1.*@dev",
-        "doctrine/orm": ">=2.2.3,<2.4-dev",
-        "doctrine/doctrine-bundle": "1.0.*",
-        "twig/extensions": "1.0.*",
+        "symfony/symfony": "2.1.*",
+        "doctrine/orm": ">=2.2.3,<2.5-dev",
+        "doctrine/doctrine-bundle": "1.1.*",
+        "twig/extensions": "1.0.*@dev",
         "symfony/assetic-bundle": "2.1.*",
         "symfony/swiftmailer-bundle": "2.1.*",
         "symfony/monolog-bundle": "2.1.*",
@@ -18,45 +18,29 @@
         "sensio/generator-bundle": "2.1.*",
         "jms/security-extra-bundle": "1.2.*",
         "jms/di-extra-bundle": "1.1.*",
-        
+        "kriswallsmith/assetic": "1.1.*@dev",
         "psliwa/pdf-bundle": "dev-master",
         "startupjob/fpdf": "*",
-        
         "knplabs/knp-snappy-bundle": "dev-master",
         "whiteoctober/tcpdf-bundle": "dev-master",
-
         "friendsofsymfony/user-bundle": "*",
         "friendsofsymfony/jsrouting-bundle": "~1.1",
-
-        "knplabs/knp-menu-bundle": "1.1.x-dev@dev",
-        "sonata-project/cache-bundle": "2.1.*-dev@dev",
-
-        "sonata-project/admin-bundle": "2.1.*@dev",
-        "sonata-project/doctrine-orm-admin-bundle": "2.1.*@dev",
-        "sonata-project/block-bundle": "2.1.*@dev",
         "leg/googlecharts-bundle": "*",
-
         "yepsua/smartwig-bundle": "dev-master"
-
-
-
-        
+      
     },
     "scripts": {
         "post-install-cmd": [
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Mopa\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::postInstallSymlinkTwitterBootstrap"
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
         ],
         "post-update-cmd": [
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Mopa\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::postInstallSymlinkTwitterBootstrap"
-           
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
         ]
     },
     "minimum-stability": "dev",
