--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,11 @@
+_welcome:
+    pattern:  /
+    defaults: { _controller: InicioBundle:Default:index }
+
+inicio:
+    resource: "@InicioBundle/Resources/config/routing.yml"
+    prefix:   /
+
 valija:
     resource: "@ValijaBundle/Resources/config/routing.yml"
     prefix:   /
@@ -10,7 +18,7 @@ orh:
     resource: "@OrhBundle/Resources/config/routing.yml"
     prefix:   /
 
-inventario:
+inventarinicioio:
     resource: "@InventarioBundle/Resources/config/routing.yml"
     prefix:   /
 
@@ -49,16 +57,6 @@ NotasBundle_notas:
 OrhBundle_personal:
     resource: "@OrhBundle/Resources/config/routing/personal.yml"
     prefix:   /personal
-
-# app/config/routing.yml
-admin:
-    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
-    prefix: /admin
-
-_sonata_admin:
-    resource: .
-    type: sonata_admin
-    prefix: /admin
 
 OrhBundle_vacaciones:
     resource: "@OrhBundle/Resources/config/routing/vacaciones.yml"
