--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -77,6 +77,9 @@ fos_user:
         form:
             type: embajada_user_registration
 
+genemu_form:
+    tinymce: ~
+
 knp_snappy:
     pdf:
         enabled:    true
