--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+documentos:
+    resource: "@DocumentosBundle/Resources/config/routing.yml"
+    prefix:   /
+
 memorandum:
     resource: "@MemorandumBundle/Resources/config/routing.yml"
     prefix:   /
