--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.1.*",
+        "symfony/symfony": "2.1.13",
         "doctrine/orm": ">=2.2.3,<2.5-dev",
         "doctrine/doctrine-bundle": "1.1.*",
         "twig/extensions": "1.0.*@dev",
@@ -28,7 +28,9 @@
         "leg/googlecharts-bundle": "*",
         "yepsua/smartwig-bundle": "dev-master",
         "genemu/form-bundle": "2.1.*",
-        "friendsofsymfony/jsrouting-bundle": "@stable"
+        "raulfraile/ladybug-bundle": "~1.0",
+        "friendsofsymfony/rest-bundle": "1.1.*",
+        "jms/serializer-bundle": "@stable"
     },
     "scripts": {
         "post-install-cmd": [
