--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -63,6 +63,10 @@ doctrine:
     orm:
         auto_generate_proxy_classes: %kernel.debug%
         auto_mapping: true
+        dql:
+            datetime_functions:
+                Year: Embajada\NotasBundle\DQL\YearFunction
+
 
 # Swiftmailer Configuration
 swiftmailer:
